--- a/Fiap.Aula02.Web/Fiap.Aula02.Web.Exemplo01/Views/Home/Index.cshtml
+++ b/Fiap.Aula02.Web/Fiap.Aula02.Web.Exemplo01/Views/Home/Index.cshtml
@@ -7,3 +7,6 @@
 
 <!-- Link para a página de cadastro de usuário -->
 <a class="btn btn-warning" asp-controller="usuario" asp-action="cadastrar">Cadastro de Usuário</a>
+
+<!-- Link para a página de cadastro de usuário -->
+<a class="btn btn-dark" asp-controller="veiculo" asp-action="cadastrar">Cadastro de Veiculo</a>
