--- a/Fiap.Aula02.Web/Fiap.Aula02.Web.Exemplo01/Views/Veiculo/Cadastrar.cshtml
+++ b/Fiap.Aula02.Web/Fiap.Aula02.Web.Exemplo01/Views/Veiculo/Cadastrar.cshtml
@@ -7,7 +7,7 @@
 <h1>Cadastro de Veículo</h1>
 
 <div class="text-right">
-    <a asp-action="index" class="btn btn-outline-dark mb-2">Home</a>
+    <a asp-action="index" class="btn btn-outline-dark mb-2">Veículos</a>
 </div>
 <table class="table">
 
@@ -15,7 +15,7 @@
     <form asp-action="cadastrar">
         @if (TempData["msg"] != null)
         {
-            <div class="alert alert">
+            <div class="alert alert-success">
                 @TempData["msg"]
             </div>
         }
@@ -37,6 +37,19 @@
         <div class="form-group">
             <input asp-for="Automatico" />
             <label asp-for="Automatico"></label>
+        </div>
+        <div class="form-group">
+            <label asp-for="Combustivel" ></label>
+            <select asp-for="Combustivel" class="form-control"
+                    asp-items="@Html.GetEnumSelectList<Combustivel>()">
+                <option>Selecione</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label asp-for="Cor"></label>
+            <select asp-for="Cor" class="form-control" asp-items="@ViewBag.cores">
+                <option>Selecione</option>
+            </select>
         </div>
         <div class="form-group">
             <label asp-for="DataCompra"></label>
